Updated jupyter notebook, added cover image: Added cover image to the jupyter notebook header.

--- a/extending-pytorch-with-custom-activation-functions.ipynb
+++ b/extending-pytorch-with-custom-activation-functions.ipynb
@@ -35,6 +35,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image](https://github.com/Lexie88rus/Activation-functions-examples-pytorch/raw/master/assets/blur-blurry-close-up-167259.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
@@ -165,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setup Tarining Procedure\n",
+    "### Setup Training Procedure\n",
     "I wrote a small training procedure, which runs 5 training epochs and prints the loss for each epoch, so we make sure that we are fitting the training set:"
    ]
   },
@@ -341,11 +348,11 @@
      "text": [
       "Training the model. Make sure that loss decreases after each epoch.\n",
       "\n",
-      "Training loss: 473.16838175058365\n",
-      "Training loss: 349.88510152697563\n",
-      "Training loss: 318.86225744336843\n",
-      "Training loss: 299.094445168972\n",
-      "Training loss: 282.8815375342965\n"
+      "Training loss: 478.8589185029268\n",
+      "Training loss: 350.0746013522148\n",
+      "Training loss: 319.25493428111076\n",
+      "Training loss: 294.4485657066107\n",
+      "Training loss: 280.9470457062125\n"
      ]
     }
    ],
@@ -391,11 +398,11 @@
      "text": [
       "Training the model. Make sure that loss decreases after each epoch.\n",
       "\n",
-      "Training loss: 471.573771238327\n",
-      "Training loss: 349.0208430290222\n",
-      "Training loss: 313.6871212050319\n",
-      "Training loss: 292.4084179252386\n",
-      "Training loss: 277.42815509438515\n"
+      "Training loss: 466.8241208344698\n",
+      "Training loss: 349.4934533312917\n",
+      "Training loss: 313.43123760819435\n",
+      "Training loss: 293.65521355718374\n",
+      "Training loss: 279.42011239379644\n"
      ]
     }
    ],
@@ -605,11 +612,11 @@
      "text": [
       "Training the model. Make sure that loss decreases after each epoch.\n",
       "\n",
-      "Training loss: 558.199397444725\n",
-      "Training loss: 472.7282418012619\n",
-      "Training loss: 452.56346118450165\n",
-      "Training loss: 441.95401164889336\n",
-      "Training loss: 428.9037281423807\n"
+      "Training loss: 558.482414022088\n",
+      "Training loss: 472.3926571011543\n",
+      "Training loss: 453.55578088760376\n",
+      "Training loss: 438.11303447186947\n",
+      "Training loss: 430.5142505913973\n"
      ]
     }
    ],
@@ -666,7 +673,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "_kg_hide-input": true
+   },
    "outputs": [
     {
      "data": {
@@ -812,11 +821,11 @@
      "text": [
       "Training the model. Make sure that loss decreases after each epoch.\n",
       "\n",
-      "Training loss: 585.5286805033684\n",
-      "Training loss: 440.848667293787\n",
-      "Training loss: 405.314261674881\n",
-      "Training loss: 389.586509719491\n",
-      "Training loss: 375.546835757792\n"
+      "Training loss: 585.9589667767286\n",
+      "Training loss: 442.55006262660027\n",
+      "Training loss: 414.7568979859352\n",
+      "Training loss: 390.45185139775276\n",
+      "Training loss: 372.7816904038191\n"
      ]
     }
    ],
